Implementación completa de funcionalidades principales
- Login con autenticación y roles (Usuario/Admin)
- Dashboard interactivo con métricas en tiempo real
- CRUD completo de eventos con zonas y asientos dinámicos
- Sistema de compras con pago simulado (Tarjeta/PSE/Efectivo)
- Mis Compras con historial, pago y cancelación
- AdminView con gestión de eventos, usuarios y reportes Excel
- ReporteService con exportación a Excel (ventas, compradores, estadísticas)
- MetricasView con gráficos JavaFX Charts (barras, torta, líneas)
- Patrones implementados: Singleton, Factory, Builder, Decorator, Adapter, Composite, Strategy, Observer, Command
- CSS moderno con diseño responsivo y animaciones
- Filtros avanzados en EventosView (nombre, ciudad, categoría, fecha, precio)
- Observer para notificaciones en tiempo real